# danielconsultant

./: .gitignore  CLAUDE.md  SECURITY_AND_OPTIMIZATION_REPORT.md  angular.json  docdugeon.txt  netlify.toml  package.json  services-data.json
.claude/: settings.local.json
deskflow/: .env.example  .gitignore  README.md  angular.json  package-lock.json  package.json  tsconfig.app.json
deskflow-mcp/: .env.example  .gitignore  DEPLOY-RENDER.md  Procfile  README.md  SENDELL-INTEGRATION.md  api_keys.py  auth.py  pyproject.toml  render.yaml  requirements.txt  server.py  server_remote.py
deskflow-mcp/prompts/: __init__.py  templates.py
deskflow-mcp/resources/: __init__.py  schema.py
deskflow-mcp/tools/: __init__.py  agent_api.py  assets.py  calendar.py  connections.py  connectors.py  desktops.py  folders.py  intelligence.py  metadata.py  notes.py  search.py  views.py  workspaces.py
deskflow/.claude/: settings.local.json
deskflow/docs/: DATABASE_PLAN.md
deskflow/public/: _headers
deskflow/scripts/: inject-env.js
deskflow/src/: env.d.ts  index.html  styles.scss
dungeon-ai-landing/: CHANGELOG-v8.1-SMART-RESPONSES.md  PLAN-FLUJO-CARGA-v2.md  PLAN-OPTIMIZACION-CARGA.md  PLAN-SOLUCION-DEFINITIVA.md  SENDELL-RAG-UPGRADE.md  angular.json  convert-to-webp.js  netlify.toml  package-lock.json  package.json
dungeon-ai-landing/scripts/: audit-models.mjs  audit-models.ts  update-broken-models.mjs
dungeon-ai-landing/src/: index.html  robots.txt  sitemap.xml  styles.scss
scripts/: copy-dist.js
src/: index.html
src/app/: app-routing.module.ts  app.component.html  (+1 more)
(+227 files in other folders)
